# forge

./: .claude_project  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SITE_README.md  build.sh  eslint.config.mjs  index.html  jest.config.js  lint-staged.config.js  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  search-index.json  search-tool-complete.md  serve.sh  setup.sh  spec.md  step-10-plan.md  step-11-plan.md  step-13-plan.md  step-17-plan.md  step-18-plan.md  step-19-plan.md  step-5-plan.md  step-7-plan.md  step-8-plan.md  todo.md  tsconfig.base.json  tsconfig.json  tsconfig.vitest.json  vitest.config.ts
code/static-site-generator/: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  rust-toolchain.toml  test-sample.md  test-site-generation.sh
code/static-site-generator/benches/: performance.rs
code/static-site-generator/dist-optimized/: index.html  search-index.json
code/static-site-generator/dist-optimized/archives/: index.html
code/static-site-generator/dist-optimized/areas/: index.html
code/static-site-generator/dist-optimized/projects/: index.html  moved-archive.html  (+5 more)
code/static-site-generator/examples/: README.md
code/static-site-generator/src/: config.rs  error_handling_tests.rs  lib.rs  main.rs
code/static-site-generator/test-output/: index.html  search-index.json
code/static-site-generator/tests/: blog_config_test.rs  blog_error_handling_test.rs  integration_tests.rs  test_documents.rs  validation.rs
(+489 files in other folders)
