[package]
name = "para-ssg"
version = "0.1.0"
edition = "2021"
authors = ["Sir Hugh <hugh@example.com>"]
description = "A static site generator for PARA-organized markdown documents"
license = "MIT"
repository = "https://github.com/your-username/why"
keywords = ["static-site-generator", "para", "markdown", "rust"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "para-ssg"
path = "src/main.rs"

[[bench]]
name = "performance"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
toml = "0.8"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
html-escape = "0.2"
rayon = "1.8"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.bench]
inherits = "release"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Disable some overly pedantic lints
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
